--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div id="logo-wrapper">
+            <img src="img/arrow.webp" id="arrow">
         </div>
     </header>
     <main>
@@ -44,7 +45,7 @@
                     </p>
                     <p>Vocalist: Adem</p>
                     <p>Drummer: Vlad<br> 
-                        (Death Dachshund, <a href="https://www.instagram.com/morte_lethe/">@morte_lethe</a>)
+                        (Morte, <a href="https://www.instagram.com/morte_lethe/">@morte_lethe</a>)
                     </p>
             </div>
         </section>
@@ -103,7 +104,7 @@
             </p>
             <h2>Instagram:</h2>
             <p>
-                <a href="https://www.instagram.com/gravstein.sd/">@suicide_dictionary</a>
+                <a href="https://www.instagram.com/suicide_dictionary/">@suicide_dictionary</a>
             </p>
         </div>
     </footer>
