--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
             <p>
                 <a href="https://www.instagram.com/suicide_dictionary/">@suicide_dictionary</a>
             </p>
+            <h2>Gmail:</h2>
+            <p>
+                <a href="mailto:suicidedictionary4@gmail.com">suicidedictionary4@gmail.com</a>
+            </p>
         </div>
     </footer>
 </body>
